plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example.aws'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

bootRun {
    jvmArgs = ["-XX:+HeapDumpOnOutOfMemoryError", "-Dfile.encoding=UTF-8"]
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/release' }
}

ext {
    jjwtVersion = '0.12.6'
}

dependencyManagement {
    applyMavenExclusions = false
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-security')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-xml')
    // SpringDoc OpenAPI replaces Springfox
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0')
    // JJWT 0.12.x (split into api / impl / jackson)
    implementation("io.jsonwebtoken:jjwt-api:${jjwtVersion}")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:${jjwtVersion}")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:${jjwtVersion}")
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    // Spring Boot 4.x: @WebMvcTest / MockMvc moved to webmvc-test artifact
    testImplementation('org.springframework.boot:spring-boot-starter-webmvc-test')
    testImplementation('org.springframework.security:spring-security-test')
}

bootJar {
    manifest {
        attributes 'Start-Class': 'com.example.config.Application'
    }
    mainClass = 'com.example.config.Application'
    archiveBaseName = 'springrestbootjwt'
    archiveVersion = '0.1.0'
    archiveFileName = 'springrestbootjwt.jar'
}

bootRun {
    mainClass = 'com.example.config.Application'
    systemProperties = System.properties
}

sourceSets {
    main {
        java { srcDir 'src/main/java' }
        resources { srcDir 'src/main/resources' }
    }
    test {
        java { srcDir 'src/test/java' }
        resources { srcDir 'src/test/resources' }
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
}

tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.incremental = true
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('stage') {
    dependsOn 'build', 'clean'
}
